# ttyblog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ttyblog/: build.py  cli.py  parse.py  render.py  serve.py
src/ttyblog/templates/: base.html  index.html  post.html
tests/: test_build.py  test_parse.py  test_render.py
