[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttyblog"
version = "0.4.1"
description = "blog engine that only reads .txt. first line is the title."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "farkhad", email = "bennett@frkhd.com" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ttyblog = "ttyblog.cli:main"

[project.urls]
Homepage = "https://github.com/f4rkh4d/ttyblog"

[tool.hatch.build.targets.wheel]
packages = ["src/ttyblog"]

[tool.hatch.build.targets.wheel.force-include]
"src/ttyblog/templates" = "ttyblog/templates"
